--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "^51.0.0",
+    "expo-asset": "~10.0.10",
+    "expo-av": "~14.0.6",
+    "expo-font": "^12.0.8",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-auto-route": "^0.3.3",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.13.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
